// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseNav 閉じた時のスナップショット 1`] = `
"<div isopen=\\"true\\">
  <nav>
    <div>
      <div class=\\"navbar\\">
        <div class=\\"navbar__box\\"><a href=\\"/\\" class=\\"nav__logo\\">
            ダミー
          </a>
          <div>
            <div class=\\"border__group\\"><span class=\\"border__top border__top--open\\"></span> <span class=\\"border__middle border__middle--fade\\"></span> <span class=\\"border__bottom border__bottom--open\\"></span></div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav__list\\" style=\\"\\">
          <ul></ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;

exports[`BaseNav 開いた時のスナップショット 1`] = `
"<div isopen=\\"true\\">
  <nav>
    <div>
      <div class=\\"navbar\\">
        <div class=\\"navbar__box\\"><a href=\\"/\\" class=\\"nav__logo\\">
            ダミー
          </a>
          <div>
            <div class=\\"border__group\\"><span class=\\"border__top border__top--close\\"></span> <span class=\\"border__middle\\"></span> <span class=\\"border__bottom border__bottom--close\\"></span></div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav__list\\" style=\\"display: none;\\">
          <ul></ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;
